force-app/main/default/objects/NBA_Cooldown_Rule__mdt/NBA_Cooldown_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Defines cooldown and spacing constraints per outreach method. Prevents over-contacting by enforcing minimum spacing and daily caps.</description>
    <label>GTM Cooldown Rule</label>
    <pluralLabel>GTM Cooldown Rules</pluralLabel>
</CustomObject>