force-app/main/default/objects/NBA_Cooldown_Rule__mdt/fields/Daily_Cap__c.field-meta.xml
<CustomField>
    <fullName>Daily_Cap__c</fullName>
    <description>Maximum number of attempts per day using this method per opportunity</description>
    <label>Daily Cap</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>