force-app/main/default/objects/NBA_Cooldown_Rule__mdt/fields/Min_Spacing_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Min_Spacing_Minutes__c</fullName>
    <description>Minimum minutes between attempts using this method</description>
    <label>Min Spacing (Minutes)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>