force-app/main/default/objects/NBA_Cooldown_Rule__mdt/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>Unique rule identifier (e.g., Default_Call_Spacing, SMS_Spacing)</description>
    <label>Rule Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>